# litestar-template

./: .env.example  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  CONTRIBUTING.rst  LICENSE  Makefile  README.md  cliff.toml  pyproject.toml  railway.json  sonar-project.properties  tailwind.config.js
.github/: FUNDING.yml
.github/workflows/: audit.yaml  ci.yaml  test.yaml
app/: __init__.py  app.py
app/config/: __init__.py  openapi.py
app/static/templates/: index.html
app/static/templates/base/: base.html  nav.html
docs/: changelog.rst  conf.py  index.rst
src/: __init__.py  __metadata__.py  app.py
src/config/: openapi.py  static_files.py  template.py
src/static/: style.css
src/static/templates/base/: footer.html
tests/: test_app.py
